Bullet Continuous Collision Detection and Physics Library
Erwin Coumans

2007 March 12
	- Added compile-time toggle between on 16-bit and 32-bit fixed-point SAP broadphase. 
		This allows the number of bodies to exceed 32767
	- Enable useQuantizedAabbCompression on btTriangleMesh, see ColladaDemo
	
2007 March 8
	- Fixed bug in constraint/island sorting (caused by replacing STL by dedicated btAlignedObjectArray with heapSort)
		Thanks Clemens Unterkofler for pointing this out!

2007 March 6
	- removed STL from the Bullet library: replace std::vector by btAlignedObjectArray. Also removed the std::set for overlapping pair set, and turned it into an overlapping pair array. The SAP only adds objects, never removed. Removal is postponed for during traversal of overlapping pairs (duplicates and non-overlapping pairs are removed during that traversal).
	- added heap sort and binary search/linear search to btAlignedObjectArray
	- fixed wrong cast, thanks Hamstray, http://www.continuousphysics.com/Bullet/phpBB2/viewtopic.php?t=1015


2007 Feb 25
	- Improved performance of convex collision shapes, cache local AABB instead of recomputation. This fixes issue with very slow performance in larger .bsp levels
	
2007 Feb 24
	- Added compressed/quantized AABB tree, 16 bytes per node, while supporting 32-bit (triangle) indices. 
	  Should be faster and smaller then original version (quantized aabb check is done in integer space)
		Original aabb tree nodes are still supported. They are 44 bytes, with full floating point precision and additional subPart index.
	- added meter-unit scaling support in ColladaConverter.cpp

2007 Feb 21
	- Build system: updated bullet.pc.in library names
	- Updated EPA comparison integration (missing parameter)
	
2007 Jan 04
	- fixed optimized AABB tree building: in some cases the tree building fails due to unbalanced trees, which generated stack overflow
	
2006 Dec 15