@@ -46,7 +46,8 @@ public:
 	{
 		SOLVER_RANDMIZE_ORDER = 1,
 		SOLVER_FRICTION_SEPARATE = 2,
-		SOLVER_USE_WARMSTARTING = 4
+		SOLVER_USE_WARMSTARTING = 4,
+		SOLVER_CACHE_FRIENDLY = 8
 	};
 
 	btSequentialImpulseConstraintSolver();
