@@ -44,7 +44,7 @@ ATTRIBUTE_ALIGNED16 (struct	btSolverConstraint)
 
 	int			m_constraintType;
 	int			m_frictionIndex;
-	int			m_unusedPadding[2];
+//	int			m_unusedPadding[2];
 
 	enum		btSolverConstraintType
 	{
